--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
         <div class="footer__main">
             <div class="footer__col">
                 <h4>About</h4>
-                <a href="index.html" title="Static Project" class="site-logo"><img src="assets/img/logo.png" alt="logo" srcset=""></a>
+                <a href="/" title="Static Project" class="site-logo"><img src="assets/img/logo.png" alt="logo" srcset=""></a>
                 <p>Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
             </div>
             <div class="footer__col">
