Added FAQ Page in Menu Items.
Added FAQ in menu items. 
FAQ is Functional till here
May - 22

--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,7 @@
                     <li><a href="#" title="About Us">About Us</a></li>
                     <li><a href="gallery.html" title="Gallery">Gallery</a></li>
                     <li><a href="contact.html" title="Contact">Contact</a></li>
+                    <li><a href="faq.html" title="FAQ">FAQ</a></li>
                 </ul>
                 
             </nav>
