--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                     <li><a href="#" title="About Us">About Us</a></li>
                     <li><a href="gallery.html" title="Gallery">Gallery</a></li>
                     <li><a href="contact.html" title="Contact">Contact</a></li>
+                    <li><a href="faq.html" title="FAQ">FAQ</a></li>
                 </ul>
                 
             </nav>
