--- a/gallery.html
+++ b/gallery.html
@@ -71,7 +71,7 @@
             -->
         </div>
         <div class="header__main">
-            <a href="index.html" title="Static Project" class="site-logo"><img src="/assets/img/logo.png" alt="logo" srcset=""></a>
+            <a href="index.html" title="Static Project" class="site-logo"><img src="assets/img/logo.png" alt="logo" srcset=""></a>
             <nav class="main-nav">
                 <a href="#" class="toggle-menu"><svg class="icon icon-menu">
                         <use xlink:href="#icon-menu"></use>
@@ -92,23 +92,23 @@
     <main class="main-container">
         <section class="gallery-box">
             <figure class="gallery-item">
-                <a href="/assets/gallery/doge.jpg" data-fancybox="gallery" data-caption="Himal Guragain" title="Himal"><img src="/assets/gallery/doge.jpg" /></a>
+                <a href="assets/gallery/doge.jpg" data-fancybox="gallery" data-caption="Himal Guragain" title="Himal"><img src="assets/gallery/doge.jpg" /></a>
                 <figcaption>Himal Guragain</figcaption>
             </figure>
             <figure class="gallery-item">
-                <a href="/assets/gallery/aayush.jpg" data-fancybox="gallery" data-caption="Aayusha Dhital"><img src="/assets/gallery/aayush.jpg" /></a>
+                <a href="assets/gallery/aayush.jpg" data-fancybox="gallery" data-caption="Aayusha Dhital"><img src="assets/gallery/aayush.jpg" /></a>
                 <figcaption>Aayusha Dhital</figcaption>
             </figure>
             <figure class="gallery-item">
-                <a href="/assets/gallery/bishal.webp" data-fancybox="gallery" data-caption="Bishalu Aryal"><img src="/assets/gallery/bishal.webp" /></a>
+                <a href="assets/gallery/bishal.webp" data-fancybox="gallery" data-caption="Bishalu Aryal"><img src="assets/gallery/bishal.webp" /></a>
                 <figcaption>Bishalu Aryal</figcaption>
             </figure>
             <figure class="gallery-item">
-                <a href="/assets/gallery/bibek.webp" data-fancybox="gallery" data-caption="Bibeka Banset"><img src="/assets/gallery/bibek.webp" /></a>
+                <a href="assets/gallery/bibek.webp" data-fancybox="gallery" data-caption="Bibeka Banset"><img src="assets/gallery/bibek.webp" /></a>
                 <figcaption>Bibeka Basnet</figcaption>
             </figure>
             <figure class="gallery-item">
-                <a href="/assets/gallery/doge.jpg" data-fancybox="gallery" data-caption="Doge Musk"><img src="/assets/gallery/doge.jpg" /></a>
+                <a href="assets/gallery/doge.jpg" data-fancybox="gallery" data-caption="Doge Musk"><img src="assets/gallery/doge.jpg" /></a>
                 <figcaption>Doge</figcaption>
             </figure>
 
@@ -120,7 +120,7 @@
         <div class="footer__main">
             <div class="footer__col">
                 <h4>About</h4>
-                <a href="/" title="Static Project" class="site-logo"><img src="logo.png" alt="logo" srcset=""></a>
+                <a href="index.html" title="Static Project" class="site-logo"><img src="/assets/img/logo.png" alt="logo" srcset=""></a>
                 <p>Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
                     still in their infancy. Various versions have evolved over the years, sometimes by accident,
                     sometimes on purpose (injected humour and the like).</p>
